website/websites/u64q/code/chameneosredux.1.scala.log

Thu, 12 May 2011 16:54:03 GMT

MAKE:
mv chameneosredux.scala chameneosredux.scala
mv: `chameneosredux.scala' and `chameneosredux.scala' are the same file
make: [chameneosredux.scala_run] Error 1 (ignored)
/usr/local/src/scala-2.9.0.final/bin/scalac chameneosredux.scala
chameneosredux.scala:33: error: value foreach is not a member of object chameneosredux.Color
      Color.foreach(c1 => Color.foreach(c2 => {
            ^
one error found
make: [chameneosredux.scala_run] Error 1 (ignored)
4.25s to complete and log all make actions

COMMAND LINE:
 /usr/local/src/jdk1.6.0_25/bin/java -server -XX:+TieredCompilation  -Xbootclasspath/a:/usr/local/src/scala-2.9.0.final/lib/scala-library.jar chameneosredux 60000

PROGRAM FAILED 


PROGRAM OUTPUT:

Exception in thread "main" java.lang.NoClassDefFoundError: chameneosredux
Caused by: java.lang.ClassNotFoundException: chameneosredux
	at java.net.URLClassLoader$1.run(URLClassLoader.java:202)
	at java.security.AccessController.doPrivileged(Native Method)
	at java.net.URLClassLoader.findClass(URLClassLoader.java:190)
	at java.lang.ClassLoader.loadClass(ClassLoader.java:306)
	at sun.misc.Launcher$AppClassLoader.loadClass(Launcher.java:301)
	at java.lang.ClassLoader.loadClass(ClassLoader.java:247)
Could not find the main class: chameneosredux.  Program will exit.
